[package]
name = "tower_fs"
version = "0.0.1"
edition = "2021"


[dependencies]
bytes = { version = "1.4", optional = true }
futures = "0.3"
http = { version = "0.2", optional = true }
http-body = { version = "0.4", optional = true }
pin-project-lite = "0.2"
tokio = {version = "1.29", features = ["fs", "io-util"]}
tokio-util = { version = "0.7", optional = true, features = ["io"] }
tower-service = "0.3"

[features]
http = ["dep:bytes", "dep:http", "dep:http-body", "dep:tokio-util"]
middleware = []

[dev-dependencies]
tokio = {version = "1.29", features = ["macros", "rt"]}
